--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,53 @@
 html {
-  position: relative;
-  min-height: 100%;
+  height: 100%;
 }
+
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  min-height: 100%;
+  padding-bottom: 120px;
+  position: relative;
+  background-image: url("../images/vintage-leaves.png");
+  background-color: #ffffff;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  color: #777777;
+
 }
+
+.navbar-brand {
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  font-size: 28px;
+  background-color: #4aaaa5;
+  font-weight: bolder;
+  height: 90px;
+  line-height: 90px;
+  padding-left: 35px;
+  padding-right: 35px;
+}
+
+#header-color {
+    color: #ffffff;
+}
+
+nav {
+  height: 90px;
+  background-color: #ffffff;
+  border-bottom: solid 2px #cccccc;
+}
+
 .footer {
-  position: absolute;
-  bottom: 0;
+  position: fixed;
+  left: 0; right: 0; bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
   height: 85px;
-  line-height: 85px; /* Vertically center the text there */
+  clear: both;
   background-color: #f5f5f5;
+  background-color: #666666;
+  border-top: solid 5px #4aaaa5;
+  text-align: center; 
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  color: #cccccc;
+  font-size: 12px;
+  line-height: 90px;
 }
 
 .portfolio-card {
